[package]
name = "kitty-media"
description = "A tool created to retrieve and cache YouTube videos for streaming, using FFmpeg and yt-dlp."
license = "AGPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-web = { version = "4.13.0", default-features = false, features = ["rustls-0_23", "macros"] }
dashmap = "6.1.0"
derive_more = "2.1.1"
regex = "1.12.3"
rustls = "0.23.37"
rustls-pki-types = { version = "1.14.0", features = ["std"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "parking_lot", "process"] }
tokio-stream = "0.1.18"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "smallvec", "parking_lot", "time"] }
serde = { version = "1.0.228", features = ["derive"] }